--- a/09 index.html
+++ b/09 index.html
@@ -334,7 +334,7 @@
         <!-- Spalte 2: Deutsches und Französisches Recht -->
         <div class="column">
           <div class="column-header">
-            <h3>Deutsches und Französisches Recht</h3>
+            <h3>Brückenkurs - pré-stage</h3>
           </div>
           <div class="tab-navigation">
             <button class="tab-btn active" onclick="showTab(1, 0)">Vorbereitung</button>
@@ -403,7 +403,7 @@
           </div>
         </div>
 
-        <!-- Spalte 3: Fremdsprachenunterricht -->
+        <!-- Spalte 3: fachsprachliche Vorbereitung - préparation linguistique -->
         <div class="column">
           <div class="column-header">
             <h3>Fremdsprachenunterricht</h3>
@@ -475,7 +475,7 @@
           </div>
         </div>
 
-        <!-- Spalte 4: Forschung & Entwicklung -->
+        <!-- Spalte 4: methodologie du travail universitaire -->
         <div class="column">
           <div class="column-header">
             <h3>Forschung & Entwicklung</h3>
@@ -547,7 +547,7 @@
           </div>
         </div>
 
-        <!-- Spalte 5: Ressourcen & Services -->
+        <!-- Spalte 5: métjodologie documentaire - Ressourcen & Services -->
         <div class="column">
           <div class="column-header">
             <h3>Ressourcen & Services</h3>
