--- a/09 index.html
+++ b/09 index.html
@@ -265,14 +265,14 @@
             <h3>Studienbezogenes Fremdsprachenlernen (SFL)</h3>
           </div>
           <div class="tab-navigation">
-            <button class="tab-btn active" onclick="showTab(0, 0)">Grundlagen</button>
-            <button class="tab-btn" onclick="showTab(0, 1)">Didaktik</button>
-            <button class="tab-btn" onclick="showTab(0, 2)">Curriculum</button>
-            <button class="tab-btn" onclick="showTab(0, 3)">Lernziele</button>
-            <button class="tab-btn" onclick="showTab(0, 4)">Wissen</button>
-            <button class="tab-btn" onclick="showTab(0, 5)">Prozesse</button>
-            <button class="tab-btn" onclick="showTab(0, 6)">Aktivitäten</button>
-            <button class="tab-btn" onclick="showTab(0, 7)">Wirkung</button>
+            <button class="tab-btn active" onclick="showTab(0, 0)">FSU an Hochschulen</button>
+            <button class="tab-btn" onclick="showTab(0, 1)">Internationalisierung - Mobilität</button>
+            <button class="tab-btn" onclick="showTab(0, 2)">SFL: Didaktische Theoriebildung</button>
+            <button class="tab-btn" onclick="showTab(0, 3)">Forschung curriculare Determinanten</button>
+            <button class="tab-btn" onclick="showTab(0, 4)">Lernzielforschung</button>
+            <button class="tab-btn" onclick="showTab(0, 5)">Forschung studienrelevantes Wissen</button>
+            <button class="tab-btn" onclick="showTab(0, 6)">Forschung Lernprozesse</button>
+            <button class="tab-btn" onclick="showTab(0, 7)">Forschung Lernaktivitäten</button>
             <button class="tab-btn" onclick="showTab(0, 8)">Evaluation</button>
           </div>
           <div class="tab-content active">
