--- a/09 index.html
+++ b/09 index.html
@@ -331,13 +331,13 @@
           </div>
         </div>
 
-        <!-- Spalte 2: Deutsches und Französisches Recht -->
+        <!-- Spalte 2: Brückenkurs-pré-stage -->
         <div class="column">
           <div class="column-header">
-            <h3>Brückenkurs - pré-stage</h3>
+            <h3>Brückenkurs - stage de prérentrée</h3>
           </div>
           <div class="tab-navigation">
-            <button class="tab-btn active" onclick="showTab(1, 0)">Vorbereitung</button>
+            <button class="tab-btn active" onclick="showTab(1, 0)">Einstufungstest</button>
             <button class="tab-btn" onclick="showTab(1, 1)">Grundlagen</button>
             <button class="tab-btn" onclick="showTab(1, 2)">Verfassung</button>
             <button class="tab-btn" onclick="showTab(1, 3)">Verwaltung</button>
