--- a/09 index.html
+++ b/09 index.html
@@ -265,15 +265,16 @@
             <h3>Studienbezogenes Fremdsprachenlernen (SFL)</h3>
           </div>
           <div class="tab-navigation">
-            <button class="tab-btn active" onclick="showTab(0, 0)">FSU an Hochschulen</button>
-            <button class="tab-btn" onclick="showTab(0, 1)">Internationalisierung - Mobilität</button>
-            <button class="tab-btn" onclick="showTab(0, 2)">SFL: Didaktische Theoriebildung</button>
-            <button class="tab-btn" onclick="showTab(0, 3)">Forschung curriculare Determinanten</button>
-            <button class="tab-btn" onclick="showTab(0, 4)">Lernzielforschung</button>
-            <button class="tab-btn" onclick="showTab(0, 5)">Forschung studienrelevantes Wissen</button>
-            <button class="tab-btn" onclick="showTab(0, 6)">Forschung Lernprozesse</button>
-            <button class="tab-btn" onclick="showTab(0, 7)">Forschung Lernaktivitäten</button>
-            <button class="tab-btn" onclick="showTab(0, 8)">Evaluation</button>
+            <button class="tab-btn active" onclick="showTab(0, 0)">SFL</button>
+            <button class="tab-btn" onclick="showTab(0, 1)">Brückenkurs-pré-stage</button>
+            <button class="tab-btn" onclick="showTab(0, 2)">Introduction</button>
+            <button class="tab-btn" onclick="showTab(0, 3)">Histoire du Droit</button>
+            <button class="tab-btn" onclick="showTab(0, 4)">Droit constitutionnel</button>
+            <button class="tab-btn" onclick="showTab(0, 5)">Droit administratif</button>
+            <button class="tab-btn" onclick="showTab(0, 6)">Droit de la famille</button>
+            <button class="tab-btn" onclick="showTab(0, 7)">Droit des obligations</button>
+            <button class="tab-btn" onclick="showTab(0, 8)">Droit de la reponsabilité</button>
+            <button class="tab-btn" onclick="showTab(0, 9)">Droit des biens</button>
           </div>
           <div class="tab-content active">
             <a href="#" class="tab-item">Fremdsprachenunterricht im Hochschulkontext</a>
