problem with droit de biens

--- a/09 index.html
+++ b/09 index.html
@@ -330,6 +330,9 @@
             <a href="#" class="tab-item">Verbesserungsmaßnahmen</a>
             <a href="#" class="tab-item">Qualitätsmanagement</a>
           </div>
+          <div class="tab-content">
+            <a href="#" class="tab-item">Droit des biens</a>
+          </div>
         </div>
 
         <!-- Spalte 2: Brückenkurs-pré-stage -->
